fixing the overflow a 2nd time

--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
   
 
 }
-html{
-}
+
 
 body{
     padding:0;
@@ -110,6 +109,7 @@ body{
     top:30px;
     display: none;
     cursor: pointer;
+    overflow-x: hidden;
     
    }
    .burger div{
@@ -124,13 +124,15 @@ body{
      width:100%;
    }
    #main{
+     
        width:100%;
+       min-height: 100vh;
        display:block;
        background-image: url("https://images.pexels.com/photos/1680140/pexels-photo-1680140.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-position: center; 
-       background-size: cover;
+       background-size:cover;
        overflow-x: hidden;
    }
    
@@ -141,7 +143,6 @@ body{
     }
 
    #landing{
-       
        display: flex;
        justify-content: center;
        align-items: center;
